--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos vitae repellat placeat quod corporis aliquid
+        eligendi natus minima nemo, perspiciatis qui nisi tempora, excepturi sint sunt sequi nihil error vero!</p>
 </body>
 
 </html>
